Reworked include form for better consistency with include schema and better use of templating

--- a/_includes/form/components/input-i18n-group.html
+++ b/_includes/form/components/input-i18n-group.html
@@ -1,7 +1,7 @@
 <input
   class="form-control"
-  id="{{ include.title }}"
-  name="{{ include.title }}"
+  id="{{ include.lang }}{{ include.title }}{{ include.group }}"
+  name="{{ include.lang }}{{ include.title }}{{ include.group }}"
   type="{{ include.type | default: "text" }}"
   {% if include.required == nil or include.required %} required="required"{% endif %}
   {% if include.value %} value="{{ include.value }}"{% endif %}
