--- a/_includes/form/components/label-i18n.html
+++ b/_includes/form/components/label-i18n.html
@@ -1,5 +1,5 @@
 <label
-  for="{{ include.title }}"
+  for="{{ include.lang }}{{ include.title }}"
   {% if include.required == nil or include.required %} class="required"{% endif %}
->{{ site.data.i18n.form[include.id][include.title].label[page.lang] }}
+>{{ site.data.i18n.form[include.id][include.title].label[include.lang][page.lang] }}
 {% if include.required == nil or include.required %} <strong class="required">({{ site.data.i18n.form.required[page.lang] }})</strong>{% endif %}</label>
