--- a/_includes/form/loop.html
+++ b/_includes/form/loop.html
@@ -1,35 +1,37 @@
 {% for formGroup in site.data.forms[page.config].formGroups %}
+{% capture id %}{{ site.data.forms[page.config].id }}{% endcapture %}
+{% assign idPreset=include.idPreset %}
 <div>
   {% if formGroup.preset %}
     {% case formGroup.preset %}
       {% when 'adminCode' %}
-        {% include form/presets/adminCode.html %}
+        {% include form/presets/adminCode.html id=idPreset %}
       {% when 'contact' %}
-        {% include form/presets/contact.html phone=formGroup.phone %}
+        {% include form/presets/contact.html id=idPreset phone=formGroup.phone %}
       {% when 'dates' %}
-        {% include form/presets/dates.html created=formGroup.created started=formGroup.started modified=formGroup.modified metadata=formGroup.metadata %}
+        {% include form/presets/dates.html id=idPreset created=formGroup.created started=formGroup.started modified=formGroup.modified %}
       {% when 'description' %}
-        {% include form/presets/description.html %}
+        {% include form/presets/description.html id=idPreset %}
       {% when 'languages' %}
-        {% include form/presets/languages.html %}
+        {% include form/presets/languages.html id=idPreset %}
       {% when 'licenses' %}
-        {% include form/presets/licenses.html %}
+        {% include form/presets/licenses.html id=idPreset %}
       {% when 'orgLevel' %}
-        {% include form/presets/orgLevel.html %}
+        {% include form/presets/orgLevel.html id=idPreset %}
       {% when 'provinceCode' %}
-        {% include form/presets/provinceCode.html %}
+        {% include form/presets/provinceCode.html id=idPreset %}
       {% when 'schemaVersion' %}
-        {% include form/presets/schemaVersion.html %}
+        {% include form/presets/schemaVersion.html id=idPreset %}
       {% when 'status' %}
-        {% include form/presets/status.html %}
+        {% include form/presets/status.html id=idPreset %}
       {% when 'submitter' %}
-        {% include form/presets/submitter.html %}
+        {% include form/presets/submitter.html id=idPreset %}
       {% when 'tags' %}
-        {% include form/presets/tags.html %}
+        {% include form/presets/tags.html id=idPreset %}
       {% when 'selectStandard' %}
-        {% include form/presets/selectStandard.html %}
+        {% include form/presets/selectStandard.html id=id %}
       {% when 'selectCode' %}
-        {% include form/presets/selectCode.html %}
+        {% include form/presets/selectCode.html id=id %}
       {% when 'hr' %}
         {% include form/presets/components/hr.html %}
       {% else %}
@@ -40,7 +42,6 @@
         {% endif %}
     {% endcase %}
   {% else %}
-    {% capture id %}{{ site.data.forms[page.config].id }}{% endcapture %}
     {% case formGroup.widget %}
       {% when 'group' %}
         {% include form/group.html id=id title=formGroup.title fields=formGroup.fields required=formGroup.required %}
