--- a/_includes/form/presets/contact.html
+++ b/_includes/form/presets/contact.html
@@ -1,17 +1,12 @@
-<h2>{{ site.data.i18n.form.presets.Contact.title[page.lang] }}</h2>
+{% assign title = "Contact" %}
+{% include form/components/title.html id=include.id title=title %}
 
-{% capture label %}{{ site.data.i18n.form.url.en[page.lang] }}{% endcapture %}
-{% include form/components/group.html name="enUrlContact" type="url" label=label required=false %}
+{% include form/components/group-i18n-group.html id=include.id title=title group="URL" %}
 
-{% capture label %}{{ site.data.i18n.form.url.fr[page.lang] }}{% endcapture %}
-{% include form/components/group.html name="frUrlContact" type="url" label=label required=false %}
+{% include form/components/group-group.html id=include.id title=title group="Email" %}
 
-{% include form/presets/components/email.html title="Contact" %}
-
-{% capture label %}{{ site.data.i18n.form.name[page.lang] }}{% endcapture %}
-{% include form/components/group.html name="nameContact" label=label rule="names" required=false %}
+{% include form/components/group-group.html id=include.id title=title group="Name" required=false %}
 
 {% if include.phone == nil or include.phone == true  %}
-{% capture label %}{{ site.data.i18n.form.presets.Contact.phone[page.lang] }}{% endcapture %}
-{% include form/components/group.html name="phone" type="tel" label=label rule="phone" required=false %}
+  {% include form/components/group-group.html id=include.id title=title group="Phone" type="tel" required=false rule="phone" %}
 {% endif %}
