--- a/_includes/form/presets/dates.html
+++ b/_includes/form/presets/dates.html
@@ -1,21 +1,17 @@
-<h2>{{ site.data.i18n.form.presets.Date.title[page.lang] }}</h2>
+{% assign title = "Date" %}
+{% include form/components/title.html id=include.id title=title %}
+
 {% if include.created %}
-  {% capture label %}{{ site.data.i18n.form.presets.Date.labels.created[page.lang] }}{% endcapture %}
-  {% include form/components/group.html name="dateCreated" type="date" label=label rule="dateISO" %}
+  {% include form/components/group-group.html id=include.id title=title group="Created" type="date" rule="dateISO" %}
 {% endif %}
 
 {% if include.started %}
-  {% capture label %}{{ site.data.i18n.form.presets.Date.labels.started[page.lang] }}{% endcapture %}
-  {% include form/components/group.html name="dateStarted" type="date" label=label rule="dateISO" %}
+{% include form/components/group-group.html id=include.id title=title group="Started" type="date" rule="dateISO" %}
 {% endif %}
 
 {% if include.modified %}
-  {% capture label %}{{ site.data.i18n.form.presets.Date.labels.modified[page.lang] }}{% endcapture %}
-  {% include form/components/group.html name="dateLastModified" type="date" label=label required=false rule="dateISO" %}
+{% include form/components/group-group.html id=include.id title=title group="Modified" type="date" rule="dateISO" required=false %}
 {% endif %}
 
-{% if include.metadata %}
-  {% capture label %}{{ site.data.i18n.form.presets.Date.labels.updated[page.lang] }}{% endcapture %}
-  {% capture now %}{{ "now" | date: "%Y-%m-%d" }}{% endcapture %}
-  {% include form/components/group.html name="dateLastUpdated" type="date" label=label rule="dateISO" readonly=true value=now %}
-{% endif %}
+{% capture now %}{{ "now" | date: "%Y-%m-%d" }}{% endcapture %}
+{% include form/components/group-group.html id=include.id title=title group="Updated" type="date" rule="dateISO" readonly=true value=now %}
