--- a/_includes/form/presets/licenses.html
+++ b/_includes/form/presets/licenses.html
@@ -1,4 +1,4 @@
-{% include form/string-i18n.html id='presets' title='Licenses' type="url" %}
+{% assign title = "Licenses" %}
+{% include form/string-i18n.html id=include.id title=title type="url" %}
 
-{% capture label %}{{ site.data.i18n.form.presets.Licenses.label.spdxID[page.lang] }}{% endcapture %}
-{% include form/components/group.html name="spdxID" label=label %}
+{% include form/components/group-group.html id=include.id title=title group="SpdxID" %}
