--- a/_includes/form/presets/selectStandard.html
+++ b/_includes/form/presets/selectStandard.html
@@ -1,8 +1,7 @@
-<h2>{{ site.data.i18n.form.standards.StandardCode.title[page.lang] }}</h2>
+{% assign title = "StandardCode" %}
+{% include form/components/title.html id=include.id title=title %}
 <div class="form-group">
-  {% assign title="StandardCode" %}
-  {% capture label %}{{ site.data.i18n.form.standards.StandardCode.label[page.lang] }}{% endcapture %}
-  {% include form/components/label.html name=title required=include.required label=label %}
+  {% include form/components/label.html id=include.id title=title %}
   <div>
     {% include form/components/input.html name=title type=include.type required=include.required value=include.value readonly=include.readonly rule=include.rule style="display: inline-block;" %}
     <select class="form-control" id="{{ title }}Select" name="{{ title }}" style="display: inline-block;">
