--- a/_includes/form/presets/licenses.html
+++ b/_includes/form/presets/licenses.html
@@ -1,4 +1,5 @@
 {% assign title = "Licenses" %}
-{% include form/string-i18n.html id=include.id title=title type="url" %}
+{% include form/components/title.html id=include.id title=title %}
+{% include form/components/group-i18n-group.html id=include.id title=title group="URL" type="url" %}
 
 {% include form/components/group-group.html id=include.id title=title group="SpdxID" %}
