--- a/_includes/form/presets/submitter.html
+++ b/_includes/form/presets/submitter.html
@@ -1,4 +1,4 @@
-{% include form/presets/components/hr.html %}
+{% include form/presets/hr.html %}
 
 {% assign title = "Submitter" %}
 {% include form/components/title.html id=include.idPreset title=title %}
