--- a/_includes/form/group.html
+++ b/_includes/form/group.html
@@ -1,7 +1,6 @@
-<h2>{{ site.data.i18n.form[include.id][include.title].title[page.lang] }}</h2>
+{% include form/components/title.html id=include.id title=include.title %}
 
 {% for field in include.fields %}
-  {% capture title %}{{ field.title }}{{ include.title }}{% endcapture %}
 
   {% if field.required == nil %}
     {% assign required = include.required %}
@@ -11,14 +10,11 @@
 
   {% case field.widget %}
     {% when 'string' %}
-      {% capture label %}{{ site.data.i18n.form[include.id][include.title].labels[field.title][page.lang] }}{% endcapture %}
-      {% include form/components/group.html id=field.id title=title label=label required=required type=field.type value=field.value readonly=field.readonly rule=field.rule %}
+      {% include form/components/group-group.html id=include.id title=include.title group=field.title required=required type=field.type value=field.value readonly=field.readonly rule=field.rule %}
     {% when 'string-i18n' %}
-      {% capture labelfr %}{{ site.data.i18n.form[include.id][include.title].labels[field.title].fr[page.lang] }}{% endcapture %}
-      {% capture labelen %}{{ site.data.i18n.form[include.id][include.title].labels[field.title].en[page.lang] }}{% endcapture %}
-      {% include form/components/group-i18n.html id=field.id title=title labelen=labelen labelfr=labelfr required=required type=field.type value=field.value readonly=field.readonly rule=field.rule %}
-    {% when 'email' %}
-      {% include form/presets/components/email.html title=include.title required=required %}
+      {% include form/components/group-i18n-group.html id=include.id title=include.title group=field.title required=required type=field.type value=field.value readonly=field.readonly rule=field.rule %}
+    {% when 'select' %}
+      {% include form/select.html id=include.id title=include.title required=required options=options %}
     {% else %}
       {% if page.lang == 'en' %}
         <p>Throw <span style="color: red;">ERROR</span> (<strong>widget</strong> not found).</p>
