--- a/_includes/form/presets/schemaVersion.html
+++ b/_includes/form/presets/schemaVersion.html
@@ -2,4 +2,4 @@
 {% include form/components/title.html id=include.id title=title %}
 {% include form/components/group.html id=include.id title=title value="1.0" readonly=true %}
 
-{% include form/presets/components/hr.html %}
+{% include form/presets/hr.html %}
