create codeForm.js file and selectOss.html file

--- a/_includes/form/loop.html
+++ b/_includes/form/loop.html
@@ -30,6 +30,8 @@
         {% include form/presets/selectStandard.html %}
       {% when 'selectCode' %}
         {% include form/presets/selectCode.html %}
+      {% when 'selectOss' %}
+        {% include form/presets/selectOss.html %}
       {% when 'hr' %}
         {% include form/presets/components/hr.html %}
       {% else %}
