--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,15 +2,15 @@
 <html class="no-js" lang="{{ page.lang }}" dir="ltr">
 <!--<![endif]-->
 
-  {% include head.html %}
+  {%- include head.html -%}
 
   <body vocab="http://schema.org/" typeof="WebPage" class="page-{{ page.ref }}">
 
-    {% include header.html %}
+    {%- include header.html -%}
 
     {{ content }}
 
-    {% include footer.html %}
+    {%- include footer.html -%}
 
   </body>
 
