--- a/_includes/codeLastUpdated.html
+++ b/_includes/codeLastUpdated.html
@@ -1,36 +1,36 @@
-{% assign dates = "" | split: "," %}
-{% assign lastUpdated_array = "" | split: "," %}
-{% assign projectName_array = "" | split: "," %}
-{% assign repoUrl_array = "" | split: "," %}
+{%- assign dates = "" | split: "," -%}
+{%- assign lastUpdated_array = "" | split: "," -%}
+{%- assign projectName_array = "" | split: "," -%}
+{%- assign repoUrl_array = "" | split: "," -%}
 
-{% for fptms in site.data.code %}
-  {% assign fptm = fptms[1] %}
-  {% for admins in fptm %}
-    {% assign admin = admins[1] %}
-    {% for release in admin.releases %}
-      {% assign d = release.date.metadataLastUpdated | date: '%s' %}
-      {% assign dates = dates | push: d %}
-    {% endfor %}
-  {% endfor %}
-{% endfor %}
+{%- for fptms in site.data.code -%}
+  {%- assign fptm = fptms[1] -%}
+  {%- for admins in fptm -%}
+    {%- assign admin = admins[1] -%}
+    {%- for release in admin.releases -%}
+      {%- assign d = release.date.metadataLastUpdated | date: '%s' -%}
+      {%- assign dates = dates | push: d -%}
+    {%- endfor -%}
+  {%- endfor -%}
+{%- endfor -%}
 
-{% assign dates = dates | sort: '' | reverse %}
+{%- assign dates = dates | sort: '' | reverse -%}
 
-{% for lastUpdated in dates limit 3 %}
-  {% for fptms in site.data.code %}
-    {% assign fptm = fptms[1] %}
-    {% for admins in fptm %}
-      {% assign admin = admins[1] %}
-      {% for release in admin.releases %}
-        {% assign d = release.date.metadataLastUpdated | date : '%s' %}
-        {% if d == lastUpdated %}
-          {% assign projectName_array = projectName_array | push: release.name[page.lang] %}
-          {% assign repoUrl_array = repoUrl_array | push: release.repositoryURL[page.lang] %}
-        {% endif %}
-      {% endfor %}
-    {% endfor %}
-  {% endfor %}
-{% endfor %}
+{%- for lastUpdated in dates limit 3 -%}
+  {%- for fptms in site.data.code -%}
+    {%- assign fptm = fptms[1] -%}
+    {%- for admins in fptm -%}
+      {%- assign admin = admins[1] -%}
+      {%- for release in admin.releases -%}
+        {%- assign d = release.date.metadataLastUpdated | date : '%s' -%}
+        {%- if d == lastUpdated -%}
+          {%- assign projectName_array = projectName_array | push: release.name[page.lang] -%}
+          {%- assign repoUrl_array = repoUrl_array | push: release.repositoryURL[page.lang] -%}
+        {%- endif -%}
+      {%- endfor -%}
+    {%- endfor -%}
+  {%- endfor -%}
+{%- endfor -%}
 
 <ul>
   <li><a href="{{ repoUrl_array[0] }}" target="_blank">{{ projectName_array[0] }}</a></li>
