--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 </main>
 
-{% if page.lang == 'fr' %}
+{%- if page.lang == 'fr' -%}
 <footer id="wb-info">
   <!--<nav class="container wb-navcurr">
     <h2 class="wb-inv">Au sujet du gouvernement</h2>
@@ -27,7 +27,7 @@
     </div>
   </div>
 </footer>
-{% else %}
+{%- else -%}
 <footer id="wb-info">
   <!--<nav class="container wb-navcurr">
     <h2 class="wb-inv">About government</h2>
@@ -54,7 +54,7 @@
     </div>
   </div>
 </footer>
-{% endif %}
+{%- endif -%}
 
 <!--[if gte IE 9 | !IE ]><!-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.js"></script>
@@ -71,16 +71,16 @@
 <script type="text/javascript" src="../assets/js/src/validation.js"></script>
 <script type="text/javascript" src="../assets/js/src/tags.js"></script>
 <script type="text/javascript" src="../assets/js/src/programmingLanguages.js"></script>
-{% if page.ref == "adminForm" %}
+{%- if page.ref == "adminForm" -%}
   <script type="text/javascript" src="../assets/js/src/adminForm.js"></script>
-{% endif %}
-{% if page.ref == "codeForm" %}
+{%- endif -%}
+{%- if page.ref == "codeForm" -%}
   <script type="text/javascript" src="../assets/js/src/codeForm.js"></script>
   <script type="text/javascript" src="../assets/js/src/adminForm.js"></script>
-{% endif %}
-{% if page.ref == "standardsForm" %}
+{%- endif -%}
+{%- if page.ref == "standardsForm" -%}
   <script type="text/javascript" src="../assets/js/src/standardsForm.js"></script>
-{% endif %}
+{%- endif -%}
 <script>
   const REPO_NAME = "{{ site.github_repository }}";
   const USERNAME = "{{ site.github_username }}";
