--- a/_includes/form/components/group-i18n.html
+++ b/_includes/form/components/group-i18n.html
@@ -1,11 +1,11 @@
 <div class="form-group">
-  {% assign lang = "en" %}
-  {% include form/components/label-i18n.html id=include.id title=include.title required=include.required lang=lang %}
-  {% include form/components/input-i18n.html id=include.it title=include.title required=include.required lang=lang value=include.value readonly=include.readonly rule=include.rule %}
+  {%- assign lang = "en" -%}
+  {% include form/components/label-i18n.html id=include.id title=include.title required=include.required lang=lang -%}
+  {%- include form/components/input-i18n.html id=include.it title=include.title required=include.required lang=lang value=include.value readonly=include.readonly rule=include.rule %}
 </div>
 
 <div class="form-group">
-  {% assign lang = "fr" %}
-  {% include form/components/label-i18n.html id=include.id title=include.title required=include.required lang=lang %}
-  {% include form/components/input-i18n.html id=include.it title=include.title required=include.required lang=lang value=include.value readonly=include.readonly rule=include.rule %}
+  {%- assign lang = "fr" -%}
+  {% include form/components/label-i18n.html id=include.id title=include.title required=include.required lang=lang -%}
+  {%- include form/components/input-i18n.html id=include.it title=include.title required=include.required lang=lang value=include.value readonly=include.readonly rule=include.rule %}
 </div>
