--- a/_includes/form/loop.html
+++ b/_includes/form/loop.html
@@ -1,63 +1,63 @@
-{% for formGroup in site.data.forms[page.config].formGroups %}
-{% capture id %}{{ site.data.forms[page.config].id }}{% endcapture %}
-{% assign idPreset=include.idPreset %}
+{%- for formGroup in site.data.forms[page.config].formGroups -%}
+{%- capture id -%}{{ site.data.forms[page.config].id }}{%- endcapture -%}
+{%- assign idPreset=include.idPreset -%}
 <div>
-  {% if formGroup.preset %}
-    {% case formGroup.preset %}
-      {% when 'adminCode' %}
-        {% include form/presets/adminCode.html id=idPreset %}
-      {% when 'contact' %}
-        {% include form/presets/contact.html id=idPreset phone=formGroup.phone %}
-      {% when 'dates' %}
-        {% include form/presets/dates.html id=idPreset created=formGroup.created started=formGroup.started modified=formGroup.modified %}
-      {% when 'description' %}
-        {% include form/presets/description.html id=idPreset %}
-      {% when 'languages' %}
-        {% include form/presets/languages.html id=idPreset %}
-      {% when 'licenses' %}
-        {% include form/presets/licenses.html id=idPreset %}
-      {% when 'orgLevel' %}
-        {% include form/presets/orgLevel.html id=idPreset %}
-      {% when 'provinceCode' %}
-        {% include form/presets/provinceCode.html id=idPreset %}
-      {% when 'schemaVersion' %}
-        {% include form/presets/schemaVersion.html id=idPreset %}
-      {% when 'status' %}
-        {% include form/presets/status.html id=idPreset %}
-      {% when 'submitter' %}
-        {% include form/presets/submitter.html id=idPreset %}
-      {% when 'tags' %}
-        {% include form/presets/tags.html id=idPreset %}
-      {% when 'selectStandard' %}
-        {% include form/presets/selectStandard.html id=id %}
-      {% when 'selectCode' %}
-        {% include form/presets/selectCode.html id=id %}
-      {% when 'hr' %}
-        {% include form/presets/hr.html %}
-      {% else %}
-        {% if page.lang == 'en' %}
+  {%- if formGroup.preset -%}
+    {%- case formGroup.preset -%}
+      {%- when 'adminCode' -%}
+        {%- include form/presets/adminCode.html id=idPreset -%}
+      {%- when 'contact' -%}
+        {%- include form/presets/contact.html id=idPreset phone=formGroup.phone -%}
+      {%- when 'dates' -%}
+        {%- include form/presets/dates.html id=idPreset created=formGroup.created started=formGroup.started modified=formGroup.modified -%}
+      {%- when 'description' -%}
+        {%- include form/presets/description.html id=idPreset -%}
+      {%- when 'languages' -%}
+        {%- include form/presets/languages.html id=idPreset -%}
+      {%- when 'licenses' -%}
+        {%- include form/presets/licenses.html id=idPreset -%}
+      {%- when 'orgLevel' -%}
+        {%- include form/presets/orgLevel.html id=idPreset -%}
+      {%- when 'provinceCode' -%}
+        {%- include form/presets/provinceCode.html id=idPreset -%}
+      {%- when 'schemaVersion' -%}
+        {%- include form/presets/schemaVersion.html id=idPreset -%}
+      {%- when 'status' -%}
+        {%- include form/presets/status.html id=idPreset -%}
+      {%- when 'submitter' -%}
+        {%- include form/presets/submitter.html id=idPreset -%}
+      {%- when 'tags' -%}
+        {%- include form/presets/tags.html id=idPreset -%}
+      {%- when 'selectStandard' -%}
+        {%- include form/presets/selectStandard.html id=id -%}
+      {%- when 'selectCode' -%}
+        {%- include form/presets/selectCode.html id=id -%}
+      {%- when 'hr' -%}
+        {%- include form/presets/hr.html -%}
+      {%- else -%}
+        {%- if page.lang == 'en' -%}
           <p>Throw <span style="color: red;">ERROR</span> (<strong>preset {{ formGroup.preset }}</strong> not found).</p>
-        {% else %}
+        {%- else -%}
           <p>Retour <span style="color: red;">ERREUR</span> (<strong>preset {{ formGroup.preset }}</strong> non trouvé).</p>
-        {% endif %}
-    {% endcase %}
-  {% else %}
-    {% case formGroup.widget %}
-      {% when 'group' %}
-        {% include form/group.html id=id title=formGroup.title fields=formGroup.fields required=formGroup.required %}
-      {% when 'select' %}
-        {% include form/select.html id=id title=formGroup.title required=formGroup.required options=formGroup.options %}
-      {% when 'string' %}
-        {% include form/string.html id=id title=formGroup.title type=formGroup.type rule=formGroup.rule required=formGroup.required %}
-      {% when 'string-i18n' %}
-        {% include form/string-i18n.html id=id title=formGroup.title type=formGroup.type rule=formGroup.rule required=formGroup.required %}
-      {% else %}
-        {% if page.lang == 'en' %}
+        {%- endif -%}
+    {%- endcase -%}
+  {%- else -%}
+    {%- case formGroup.widget -%}
+      {%- when 'group' -%}
+        {%- include form/group.html id=id title=formGroup.title fields=formGroup.fields required=formGroup.required -%}
+      {%- when 'select' -%}
+        {%- include form/select.html id=id title=formGroup.title required=formGroup.required options=formGroup.options -%}
+      {%- when 'string' -%}
+        {%- include form/string.html id=id title=formGroup.title type=formGroup.type rule=formGroup.rule required=formGroup.required -%}
+      {%- when 'string-i18n' -%}
+        {%- include form/string-i18n.html id=id title=formGroup.title type=formGroup.type rule=formGroup.rule required=formGroup.required -%}
+      {%- else -%}
+        {%- if page.lang == 'en' -%}
           <p>Throw <span style="color: red;">ERROR</span> (<strong>widget {{ formGroup.widget }}</strong> not found).</p>
-        {% else %}
+        {%- else -%}
           <p>Retour <span style="color: red;">ERREUR</span> (<strong>widget {{ formGroup.widget }}</strong> non trouvé).</p>
-        {% endif %}
-    {% endcase %}
-  {% endif %}
+        {%- endif -%}
+    {%- endcase -%}
+  {%- endif -%}
 </div>
-{% endfor %}
+{%- endfor -%}
