--- a/_includes/form/presets/adminCode.html
+++ b/_includes/form/presets/adminCode.html
@@ -1,38 +1,39 @@
-{% assign title = "AdminCode" %}
-{% include form/components/title.html id=include.id title=title %}
+{%- assign title = "AdminCode" -%}
+{%- include form/components/title.html id=include.id title=title -%}
+
 <div class="form-group">
 
-  {% include form/components/label.html id=include.id title=title %}
+  {%- include form/components/label.html id=include.id title=title -%}
 
   <select class="form-control" id="{{ title }}" name="{{ title }}" required="required">
     <option value="">&nbsp;</option>
     <optgroup label={{ site.data.i18n.administrations.Federal.en }}>
-      {% for org in site.data.administrations.federal %}
-        {% if org.name[page.lang] != nil %}
+      {%- for org in site.data.administrations.federal- %}
+        {%- if org.name[page.lang] != nil -%}
           <option value="{{ org.code }}">{{ org.name[page.lang] }}</option>
-        {% endif %}
+        {%- endif -%}
       {% endfor %}
     </optgroup>
     <optgroup label={{ site.data.i18n.administrations.Provincial.en }}>
-      {% for org in site.data.administrations.provincial %}
-        {% if org.name[page.lang] != nil %}
+      {%- for org in site.data.administrations.provincial -%}
+        {%- if org.name[page.lang] != nil -%}
           <option value="{{ org.code }}">{{ org.name[page.lang] }}</option>
-        {% endif %}
-      {% endfor %}
+        {%- endif -%}
+      {%- endfor -%}
     </optgroup>
     <optgroup label={{ site.data.i18n.administrations.Municipal.en }}>
-      {% for org in site.data.administrations.municipal %}
-        {% if org.name[page.lang] != nil %}
+      {%- for org in site.data.administrations.municipal -%}
+        {%- if org.name[page.lang] != nil- %}
           <option value="{{ org.code }}">{{ org.name[page.lang] }}</option>
-        {% endif %}
-      {% endfor %}
+        {%- endif -%}
+      {%- endfor -%}
     </optgroup>
     <optgroup label={{ site.data.i18n.administrations.Aboriginal.en }}>
-      {% for org in site.data.administrations.aboriginal %}
-        {% if org.name[page.lang] != nil %}
+      {%- for org in site.data.administrations.aboriginal -%}
+        {%- if org.name[page.lang] != nil -%}
           <option value="{{ org.code }}">{{ org.name[page.lang] }}</option>
-        {% endif %}
-      {% endfor %}
+        {%- endif -%}
+      {%- endfor -%}
     </optgroup>
   </select>
 </div>
