--- a/_includes/form/presets/orgLevel.html
+++ b/_includes/form/presets/orgLevel.html
@@ -1,7 +1,10 @@
-{% assign title = "OrgLevel" %}
-{% include form/components/title.html id=include.id title=title %}
+{%- assign title = "OrgLevel" -%}
+{%- include form/components/title.html id=include.id title=title -%}
+
 <div class="form-group">
-    {% include form/components/label.html id=include.id title=title %}
+
+  {%- include form/components/label.html id=include.id title=title -%}
+
   <select class="form-control" id="{{ title }}" name="{{ title }}" required="required">
     <option value="">&nbsp;</option>
     <option value="municipal" selected>{{ site.data.i18n.form.presets.OrgLevel.options.municipal[page.lang] }}</option>
