--- a/_includes/form/presets/selectStandard.html
+++ b/_includes/form/presets/selectStandard.html
@@ -1,15 +1,15 @@
-{% assign title = "StandardCode" %}
-{% include form/components/title.html id=include.id title=title %}
+{%- assign title = "StandardCode" -%}
+{%- include form/components/title.html id=include.id title=title -%}
 <div class="form-group">
-  {% include form/components/label.html id=include.id title=title %}
+  {%- include form/components/label.html id=include.id title=title -%}
   <div>
-    {% include form/components/input.html name=title type=include.type required=include.required value=include.value readonly=include.readonly rule=include.rule style="display: inline-block;" %}
+    {%- include form/components/input.html name=title type=include.type required=include.required value=include.value readonly=include.readonly rule=include.rule style="display: inline-block;" -%}
     <select class="form-control" id="{{ title }}Select" name="{{ title }}" style="display: inline-block;">
       <option value="">&nbsp;</option>
-      {% for standards in site.data.normes_ouvertes-open_standards %}
-        {% assign standard = standards[1] %}
+      {%- for standards in site.data.normes_ouvertes-open_standards -%}
+        {%- assign standard = standards[1] -%}
         <option value="{{ standard.standardCode }}">{{ standard.standardCode }}</option>
-      {% endfor %}
+      {%- endfor -%}
     </select>
   </div>
 </div>
