--- a/_includes/form/presets/status.html
+++ b/_includes/form/presets/status.html
@@ -1,12 +1,12 @@
-{% assign title = "Status" %}
-{% include form/components/title.html id=include.id title=title %}
+{%- assign title = "Status" -%}
+{%- include form/components/title.html id=include.id title=title -%}
 <div class="form-group">
-  {% include form/components/label.html id=include.id title=title required=false %}
+  {%- include form/components/label.html id=include.id title=title required=false -%}
   <select class="form-control" id="{{ title }}" name="{{ title }}">
     <option value="">&nbsp;</option>
-    {% for options in site.data.i18n.form[include.id][title].options %}
-      {% assign option = options[1] %}
+    {%- for options in site.data.i18n.form[include.id][title].options -%}
+      {%- assign option = options[1] -%}
       <option value="{{ option.en }}">{{ option[page.lang] }}</option>
-    {% endfor %}
+    {%- endfor -%}
   </select>
 </div>
