--- a/_includes/form/select.html
+++ b/_includes/form/select.html
@@ -1,10 +1,10 @@
-{% include form/components/title.html id=include.id title=include.title %}
+{%- include form/components/title.html id=include.id title=include.title -%}
 <div class="form-group">
-  {% include form/components/label.html id=include.id title=include.title require=include.required %}
+  {%- include form/components/label.html id=include.id title=include.title require=include.required -%}
   <select class="form-control" id="{{ include.title }}" name="{{ include.title }}"{% if include.required == nil or include.required %} required="required"{% endif %}>
     <option value="">&nbsp;</option>
-    {% for option in include.options %}
+    {%- for option in include.options -%}
       <option value="{{ option }}">{{ site.data.i18n.form[include.id][include.title].options[option][page.lang] }}</option>
-    {% endfor %}
+    {%- endfor -%}
   </select>
 </div>
