--- a/_includes/form/string.html
+++ b/_includes/form/string.html
@@ -1,2 +1,2 @@
-{% include form/components/title.html id=include.id title=include.title %}
-{% include form/components/group.html id=include.id title=include.title required=include.required type=include.type value=include.value readonly=include.readonly rule=include.rule %}
+{%- include form/components/title.html id=include.id title=include.title -%}
+{%- include form/components/group.html id=include.id title=include.title required=include.required type=include.type value=include.value readonly=include.readonly rule=include.rule -%}
