--- a/_includes/standardsTable.html
+++ b/_includes/standardsTable.html
@@ -10,17 +10,17 @@
         <label for="dt_tag">Tag</label>
         <select class="form-control" id="dt_tag" name="dt_tag" data-column="3">
           <option value="">&nbsp;</option>
-          {% assign tag_array = "" | split: ',' %}
-          {% for standards in site.data.normes_ouvertes-open_standards %}
-            {% assign standard = standards[1] %}
-            {% for tag in standard.tags[page.lang] %}
-              {% assign tag_array = tag_array | push: tag %}
-            {% endfor %}
-          {% endfor %}
-          {% assign tag_array = tag_array | group_by: "" | sort: "name" %}
-          {% for tag in tag_array %}
+          {%- assign tag_array = "" | split: ',' -%}
+          {%- for standards in site.data.normes_ouvertes-open_standards -%}
+            {%- assign standard = standards[1] -%}
+            {%- for tag in standard.tags[page.lang] -%}
+              {%- assign tag_array = tag_array | push: tag -%}
+            {%- endfor -%}
+          {%- endfor -%}
+          {%- assign tag_array = tag_array | group_by: "" | sort: "name" -%}
+          {%- for tag in tag_array -%}
             <option value="{{ tag.name }}">{{ tag.name }}</option>
-          {% endfor %}
+          {%- endfor -%}
         </select>
       </div>
 
@@ -50,27 +50,27 @@
     </thead>
     <tbody>
 
-      {% for standards in site.data.normes_ouvertes-open_standards %}
-        {% assign standard = standards[1] %}
+      {%- for standards in site.data.normes_ouvertes-open_standards -%}
+        {%- assign standard = standards[1] -%}
         <tr>
           <td><a href="#{{ standard.name[page.lang] | slugify }}" aria-controls="{{ standard.name[page.lang] | slugify }}" class="overlay-lnk" role="button">{{ standard.name[page.lang] }}</a></td>
           <td>{{ standard.description[page.lang] }}</td>
           <td><a href="{{ standard.specURL[page.lang] }}" target="_blank">{{ standard.standardsOrg }}</a></td>
           <td>
-            {% for tag in oss.tags[page.lang] %}
+            {%- for tag in oss.tags[page.lang] -%}
               {{ tag }}&nbsp;
-            {% endfor %}
+            {%- endfor -%}
           </td>
         </tr>
-      {% endfor %}
+      {%- endfor -%}
 
     </tbody>
   </table>
 </div>
 
 <!-- Modal Lightboxes -->
-{% for standards in site.data.normes_ouvertes-open_standards %}
-  {% assign standard = standards[1] %}
+{%- for standards in site.data.normes_ouvertes-open_standards -%}
+  {%- assign standard = standards[1] -%}
 
   <section id="{{ standard.name[page.lang] | slugify }}" class="wb-overlay modal-content overlay-def wb-popup-mid">
     <header class="modal-header">
@@ -79,20 +79,20 @@
     <div class="modal-body">
       <p><strong>{{ standard.description[page.lang] }}</strong></p>
       <p>Is being used by:</p>
-      {% for admin in standard.administrations %}
+      {%- for admin in standard.administrations -%}
         <div class="row">
-          {% assign aName = site.data.administrations.federal | where: "code", admin.adminCode %}
+          {%- assign aName = site.data.administrations.federal | where: "code", admin.adminCode -%}
           <div class="col-md-7">
             <strong>{{ aName[0].name[page.lang] }}</strong>
           </div>
           <div class="col-md-5">{{ admin.status }}</div>
         </div>
-      {% endfor %}
+      {%- endfor -%}
 
     </div>
   </section>
 
-{% endfor %}
+{%- endfor -%}
 
 </div>
 
