--- a/_includes/form/presets/languages.html
+++ b/_includes/form/presets/languages.html
@@ -22,5 +22,5 @@
       </div>
     {% endfor %}
   </div>
-  <button type="button" class="btn btn-primary" onclick = "addMoreLanguages()">{{ site.data.i18n.form.presets.Languages.add[page.lang] }}</button>
+  <button type="button" class="btn btn-primary" onclick = "addMoreLanguages()"><i class="glyphicon glyphicon-plus"></i> {{ site.data.i18n.form.presets.Languages.add[page.lang] }}</button>
 </div>
