--- a/_includes/form/loop.html
+++ b/_includes/form/loop.html
@@ -32,6 +32,8 @@
         {% include form/presets/selectCode.html %}
       {% when 'hr' %}
         {% include form/presets/components/hr.html %}
+      {% when 'newAdmin' %}
+        {% include form/presets/newAdmin.html id=id title=formGroup.title fields=formGroup.fields %}
       {% else %}
         {% if page.lang == 'en' %}
           <p>Throw <span style="color: red;">ERROR</span> (<strong>preset {{ formGroup.preset }}</strong> not found).</p>
