--- a/_includes/form/presets/selectCode.html
+++ b/_includes/form/presets/selectCode.html
@@ -20,3 +20,8 @@
   {% include form/components/label.html name=titleFr required=include.required label=labelFr %}
   {% include form/components/input.html name=titleFr type=include.type required=include.required value=include.value readonly=include.readonly rule=include.rule %}
 </div>
+
+<div class="hide">
+  
+
+</div>
